--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
+    font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 img {
     width: 100%;
     height: auto;
@@ -18,7 +20,7 @@ img {
 #about-us p {
     padding: 0 20%;
     padding-bottom: 20px;
-    font-family: Roboto, sans-serif;
+
     text-align: center;
     line-height: 1.6em;
 }
@@ -47,7 +49,7 @@ img {
 #about-us .content .right .p2 {
     padding: 0 0;
 }
-@media (max-width: 450px) {
+@media (max-width: 575px) {
     #about-us .content {
         display: inline;
     }
@@ -62,5 +64,281 @@ img {
     #about-us .content .right p {
         text-align: left;
         max-width: 100vw;
+    }
+}
+/* 
+ */
+.header {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px 0;
+    font-size: small;
+}
+.header .header-left {
+    display: flex;
+}
+a {
+    text-decoration: none;
+}
+.header .header-left .info_phone {
+    padding-left: 15px;
+}
+#about-us nav {
+    display: flex;
+    justify-content: space-around;
+}
+#about-us nav .logo {
+    width: 25vw;
+}
+li {
+    list-style: none;
+}
+nav .menu .nav-list {
+    padding-top: 3px;
+    display: flex;
+}
+nav .menu .nav-list .nav-item {
+    font-weight: bold;
+
+    padding: 10px 15px;
+}
+nav .menu .nav-list .have-subnav {
+    position: relative;
+}
+nav .menu .nav-list .nav-item .sub-nav-product {
+    display: none;
+    font-weight: normal;
+    top: 38px;
+    left: 0px;
+    background-color: white;
+    width: 235px;
+    position: absolute;
+    border: 2px solid hsla(0, 0%, 80%, 0.85);
+}
+nav .menu .nav-list .have-subnav:hover .sub-nav-product {
+    display: block;
+}
+nav .menu .nav-list .nav-item:hover {
+    color: #679a06;
+}
+nav .menu .nav-list .nav-item .sub-nav-product li {
+    padding: 15px 10px;
+    color: hsla(0, 0%, 40%, 0.85);
+    background-color: white;
+}
+
+nav .menu .nav-list .nav-item .sub-nav-product li:hover {
+    background-color: hsla(0, 0%, 80%, 0.85);
+    color: black;
+    transition: all 0.2s;
+}
+nav .search-bar {
+    position: relative;
+}
+nav .search-bar > i {
+    padding-top: 19px;
+    height: 59px;
+}
+
+.search-bar:hover nav .search-bar .search-bar-content {
+    display: flex;
+}
+nav .search-bar .search-bar-content {
+    display: none;
+    position: absolute;
+    padding: 20px;
+    top: 40px;
+    left: -62px;
+    border: 2px solid hsla(0, 0%, 80%, 0.85);
+    background-color: white;
+}
+nav a {
+    color: black;
+    display: flex;
+    padding: 20px;
+}
+.name {
+    color: #679a06;
+}
+.search-used i {
+    padding: 10px;
+    background-color: #679a06;
+}
+nav a div {
+    padding: 0 5px;
+}
+main {
+    padding-bottom: 15px;
+}
+/* @media (max-height: 50px) {
+    nav {
+        position: fixed;
+        background-color: white;
+        width: 100vw;
+        top: 0;
+    }
+} */
+footer {
+    display: flex;
+    background-color: hsla(0, 0%, 95%, 0.9);
+}
+.footer-container .footer-title {
+    color: #679a06;
+
+    padding: 15px;
+    padding-left: 0px;
+}
+.footer-container {
+    padding: 3%;
+}
+footer div ul li {
+    font-family: Roboto, sans-serif;
+    line-height: 30px;
+    padding-top: 5px;
+    font-size: smaller;
+}
+.footer-item .bold {
+    font-weight: bold;
+}
+.footer-by span {
+    color: hsla(0, 0%, 55%, 0.7);
+    font-size: small;
+    padding-top: 10px;
+}
+
+.footer-by {
+    background-color: hsla(0, 0%, 95%, 0.9);
+
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+}
+.footer-by a img {
+    padding: 4px 7px;
+    width: 155px;
+    background-color: hsla(0, 0%, 95%, 0.9);
+}
+a {
+    color: black;
+}
+.line-container {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+}
+
+.solid-line {
+    width: 100%;
+    height: 1px;
+    background-color: hsla(0, 0%, 80%, 0.85);
+}
+
+.blur-line {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20%;
+    height: 1px;
+    background-color: #3498db;
+}
+.language ul img {
+    width: 22px;
+    padding-right: 8px;
+}
+.language ul li {
+    display: flex;
+    padding-right: 60px;
+}
+.language .a {
+    position: relative;
+    padding: 16px;
+    padding-right: 80px;
+    display: flex;
+}
+.language ul {
+    position: absolute;
+    background-color: white;
+    border: 2px solid hsla(0, 0%, 80%, 0.85);
+    display: none;
+    top: 93px;
+    right: 0px;
+}
+.language:hover .language-list {
+    display: block;
+}
+a:hover {
+    color: #679a06;
+}
+/* nav {
+    position: fixed;
+    background-color: white;
+    width: 100vw;
+    scroll-padding-top: 20px;
+} */
+
+.footer-after {
+    display: flex;
+}
+li > .language {
+    display: none;
+}
+@media (max-width: 575px) {
+    nav > .language {
+        display: none;
+    }
+    li > .language {
+        display: flex;
+    }
+    footer {
+        display: block;
+    }
+    .header {
+        display: none;
+    }
+    .menu ul {
+        height: 100vh;
+        flex-direction: column;
+        background-color: hsla(0, 0%, 100%, 0.95);
+        bottom: 0;
+        box-shadow: 0 0 10px 0 rgba(33, 18, 18, 0.5);
+        left: 0;
+        position: fixed;
+        top: 0;
+        transform: translateX(-270px);
+        transition: transform 0.8s;
+        width: 260px;
+    }
+    .menu ul > div {
+        padding: 20px 10px;
+    }
+    .search-used {
+        display: flex;
+    }
+    .nav-list > i {
+        position: fixed;
+        top: 0;
+        right: -142px;
+        padding: 10px;
+        font-size: 30px;
+        height: 40px;
+        font-style: normal;
+        width: 40px;
+        cursor: pointer;
+    }
+    .menu > i {
+        position: absolute;
+        right: 266px;
+        font-size: 23px;
+        top: 15px;
+    }
+    .menu {
+        position: relative;
+    }
+    #about-us nav .logo {
+        position: relative;
+        top: 9px;
+        left: 61px;
+        width: 230px;
     }
 }
