--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ img {
         max-width: 100vw;
     }
 }
-/* 
+/* phần đầu trang
  */
 .header {
     display: flex;
@@ -178,6 +178,9 @@ main {
         top: 0;
     }
 } */
+
+/* phần cuối trang */
+
 footer {
     display: flex;
     background-color: hsla(0, 0%, 95%, 0.9);
@@ -270,12 +273,6 @@ a {
 a:hover {
     color: #679a06;
 }
-/* nav {
-    position: fixed;
-    background-color: white;
-    width: 100vw;
-    scroll-padding-top: 20px;
-} */
 
 .footer-after {
     display: flex;
@@ -293,6 +290,7 @@ li > .language {
 .menu ul .search-used {
     display: none;
 }
+/* reponsive  */
 @media (max-width: 575px) {
     .menu > i {
         display: block;
@@ -318,7 +316,7 @@ li > .language {
     .menu > ul {
         height: 100vh;
         flex-direction: column;
-        background-color: hsla(0, 0%, 100%, 0.95);
+        background-color: hsla(0, 0%, 97%, 0.95);
         bottom: 0;
         box-shadow: 164px 0 10px 0 rgba(33, 18, 18, 0.5);
         left: 0;
@@ -367,16 +365,29 @@ li > .language {
     }
     nav .menu .nav-list .nav-item .sub-nav-product {
         position: static;
+        border: none;
+        background-color: hsla(0, 0%, 97%, 0.95);
     }
     .language ul {
         position: absolute;
         border: none;
         display: none;
-        top: 295px;
+        top: 333px;
         right: 37px;
+        background-color: hsla(0, 0%, 97%, 0.95);
+
     }
     .menu ul .search-used {
-        padding: 9px;
+        padding: 24px;
+    }
+    .menu ul .search-used input {
+        padding: 8px;
+    }
+    nav .menu .nav-list .nav-item {
+        font-weight: normal;
+    }
+    nav .menu .nav-list .nav-item .sub-nav-product li {
+        background-color: hsla(0, 0%, 97%, 0.95);
     }
 }
 nav.sticky {
