--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img {
     height: auto;
     max-width: 100vw; /* Đảm bảo hình ảnh không vượt quá kích thước thực của nó */
 }
-#about-us h1 {
+/* #about-us h1 {
     color: #679a06;
     font-family: Roboto, sans-serif;
     text-align: center;
@@ -65,7 +65,7 @@ img {
         text-align: left;
         max-width: 100vw;
     }
-}
+} */
 /* phần đầu trang
  */
 .header {
@@ -83,11 +83,11 @@ a {
 .header .header-left .info_phone {
     padding-left: 15px;
 }
-#about-us nav {
+nav {
     display: flex;
     justify-content: space-around;
 }
-#about-us nav .logo {
+.logo {
     width: 25vw;
 }
 li {
@@ -192,7 +192,7 @@ footer {
     padding-left: 0px;
 }
 .footer-container {
-    padding: 3%;
+    padding: 3vh;
 }
 footer div ul li {
     font-family: Roboto, sans-serif;
@@ -352,7 +352,7 @@ li > .language {
     .menu {
         position: relative;
     }
-    #about-us nav .logo {
+    nav .logo {
         position: relative;
         top: 9px;
         left: 61px;
@@ -375,7 +375,6 @@ li > .language {
         top: 333px;
         right: 37px;
         background-color: hsla(0, 0%, 97%, 0.95);
-
     }
     .menu ul .search-used {
         padding: 24px;
