--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img {
     height: auto;
     max-width: 100vw; /* Đảm bảo hình ảnh không vượt quá kích thước thực của nó */
 }
-/* #about-us h1 {
+#about-us h1 {
     color: #679a06;
     font-family: Roboto, sans-serif;
     text-align: center;
@@ -65,7 +65,7 @@ img {
         text-align: left;
         max-width: 100vw;
     }
-} */
+}
 /* phần đầu trang
  */
 .header {
