--- a/contact.css
+++ b/contact.css
@@ -1,536 +1,351 @@
-*{
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+* {
+    font-family: Roboto, sans-serif;
     margin: 0;
-    border: 0;
-    padding:0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+img {
+    width: 100%;
+    height: auto;
+    max-width: 100vw; /* Đảm bảo hình ảnh không vượt quá kích thước thực của nó */
 }
-
-.flex-row{
-    flex-direction: column;
+.header {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px 0;
+    font-size: small;
 }
-
-.flex{
+.header .header-left {
     display: flex;
 }
-
-.justify-center{
-    justify-content:center;
+a {
+    text-decoration: none;
 }
-
-.nav-list{
-    list-style: none;
+.header .header-left .info_phone {
+    padding-left: 15px;
 }
-
-.nav-container{
-    margin-top: 12px;
-    font-size: 14px;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #ddd;
-    position: relative;
-    z-index: 10;
-}
-
-.info_address{
-    margin-right: 16px;
-    align-items: center;
-    margin-left: 200px;
-}
-
-.info_address i{
-    font-size: 24px;
-}
-
-.info_phone{
-    align-items: center;
-    line-height: 30px;
-}
-
-.info_phone i{
-    margin-top: 8px;
-    margin-right: 12px;
-}
-
-.info_phone-1{
-    margin-right: 12px;
-    position: relative;
-}
-
-.info_phone-1::after{
-    content: "";
-    border-left: 1px solid #000;
-    position: absolute;
-    height: 14px;
-    top:8px;
-    right: -6px;
-}
-
-.nav_email{
-    margin-left: 150px;
-}
-
-.nav_email i{
-    margin-right: 12px;
-    margin-top: 4px;
-}
-.info_phone-1,.info_phone-2,.email_name{
-    cursor: pointer;
-}
-
-.info_phone-1:hover,.info_phone-2:hover,.email_name:hover{
-    color:#679A06;
-}
-
-.header-logo{
-    width: 270px;
-    height: 60px;
-    cursor: pointer;
-}
-
-.header{
-    justify-content: space-between;
-    background-color: rgba(255, 255, 255, 0.9);
-    align-items: center;
-    padding-left: 200px;
-    margin-bottom: 12px;
-    padding-right: 220px;
-    box-shadow: 0px 2px 0px rgba(0,0,0,0.2);
-    width: 100%;
-    top:7%;
-    position: fixed;
-    z-index: 9;
-}
-
-.nav-list{
-    font-size: 16px;
-    font-weight:700;
-    margin-left: 52px;
-}
-
-.nav-item{
-    margin: 0 25px;
-    cursor: pointer;
-}
-
-.nav-item:first-child{
-    color:#679A06;
-}
-
-.nav-item:hover{
-    color: #679A06;
-}
-
-.header-country{
-    align-items: center;
-}
-
-.header-country i{
-    font-size: 20px;
-    margin-right: 24px;
-}
-
-.languages{
-    line-height:52px;
-}
-
-.logo{
-    margin-left: 4px;
-    margin-top: 20px;
-    width: 20px;
-    height: 20px;
-}
-
-.section i{
-    margin-top: 20px;
-    margin-left: 12px;
-    font-size: 12px;
-}
-
-.icon-search{
-    cursor: pointer;
-}
-
-.section{
-    cursor: pointer;
-}
-
-
-.footer-container{
-    height: 150px;
-    padding-left: 32px;
-}
-
-.footer-title{
-    color:#679A06;
-}
-
-.bold{
-    font-weight: bold;
-}
-
-footer{
-    text-align: start;
-    border-top: 1px solid #bbb;
-    background-color: #eee;
-    padding:60px 80px 120px;
+nav {
     display: flex;
-    width: 100vw;
-}
-
-.footer-container:nth-child(1){
-    flex:2;
-}
-
-.footer-container:nth-child(2),.footer-container:nth-child(3){
-    flex:1;
-}
-
-.footer-title{
-    position: relative;
-    padding-bottom: 12px;
-}
-
-.footer-title::after{
-    content: "";
-    position: absolute;
-    border-bottom: 2px solid #bbb;
-    width: 100%;
-    top:100%;
-    left:0;
-}
-
-.footer-list{
-    height: 100%;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
     justify-content: space-around;
 }
-
-.point:hover{
-    cursor: pointer;
-    color:#679A06;
+.logo {
+    width: 20vw;
 }
-
-.active{
-    color:#679A06;
+nav .menu {
+    padding-top: 6px;
 }
-
-.no-flex{
-    justify-content: start;
-}
-
-.footer-by{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #000;
-    background-color: #eee;
-    padding:8px;
-    line-height: 20px;
-}
-
-.footer-img{
-    margin-left: 8px;
-    height: 12px;
-}
-
-.sub-nav-product{
+li {
     list-style: none;
-    position: absolute;
-    background-color: #fff;
-    width: 250px;
-    top:125%;
-    left:-20%;
-    border: 1px solid #eee;
-    border-radius: 4px;
-    display: none;
 }
-
-.sub-item:first-child:after{
-    content:"";
-    position: absolute;
-    border:8px solid;
-    top:-6%;
-    left:13%;
-    border-color:transparent transparent #eee transparent;
+nav .menu .nav-list {
+    padding-top: 3px;
+    display: flex;
 }
+nav .menu .nav-list .nav-item {
+    font-weight: bold;
 
-.have-subnav::before{
-    content:"";
-    position: absolute;
-    width: 100px;
-    height: 20px;
-    top:90%;
-    left:0;
-    background-color: transparent;
+    padding: 10px 15px;
 }
-
-.have-subnav{
+nav .menu .nav-list .have-subnav {
     position: relative;
 }
-
-.have-subnav:hover .sub-nav-product{
-    display: block;
-}
-
-.sub-item:first-child{
-    margin-top: 20px;
-}
-
-.sub-item:last-child{
-    margin-bottom: 20px;
-}
-
-.sub-item{
-    color:#bbb;
-    font-weight: 400;
-    display: block;
-    line-height: 40px;
-    padding-left: 20px;
-}
-
-.sub-item:hover{
-    color:#000;
-    background-color: #eee;
-}
-
-.search-bar:hover .icon-search{
-    color:#679A06 !important;
-}
-
-.icon-search::after{
-    content:"";
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
+nav .menu .nav-list .nav-item .sub-nav-product {
+    display: none;
+    font-weight: normal;
+    top: 38px;
+    left: 0px;
+    background-color: white;
+    width: 235px;
     position: absolute;
-    top:100%;
-    left:0;
+    border: 2px solid hsla(0, 0%, 80%, 0.85);
+    z-index: 999;
+}
+nav .menu .nav-list .have-subnav:hover .sub-nav-product {
+    display: block;
+}
+nav .menu .nav-list .nav-item:hover {
+    color: #679a06;
+}
+nav .menu .nav-list .nav-item .sub-nav-product li {
+    padding: 15px 10px;
+    color: hsla(0, 0%, 40%, 0.85);
+    background-color: white;
 }
 
-.icon-search{
+nav .menu .nav-list .nav-item .sub-nav-product li:hover {
+    background-color: hsla(0, 0%, 80%, 0.85);
+    color: black;
+    transition: all 0.2s;
+}
+nav .search-bar {
     position: relative;
 }
+nav .search-bar > i {
+    padding-top: 19px;
+    height: 59px;
+}
 
-.search-bar-content{
-    top:150%;
-    left:-500%;
-    position: absolute;
-    border:2px solid #bbb;
-    border-radius: 4px;
-    background-color: #fff;
-    display: flex;
-    padding:12px 0 16px 12px;
+nav .search-bar .search-bar-content {
     display: none;
-}
-
-.icon-search:hover .search-bar-content{
-    display: flex;
-}
-
-.search-bar-content input{
-    outline: none;
-    border: 1px solid #ccc;
-    text-indent: 12px;
-    width: 200px;
-    height: 32px;
-}
-
-.icon-search-sub{
-    color:#fff;
-    padding:6px;
-    background-color: #679A06;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.icon-search-sub:hover{
-    background-color: #4a6e06;
-}
-
-.active-p:hover{
-    color:#679A06;
-}
-
-.section{
-    position: relative;
-}
-
-.country-child{
-    right:10%;
-    top:80%;
     position: absolute;
-    background-color: #fff;
-    border-radius: 4px;
-    border: 2px solid #bbb;
-    width: 200px;
-    padding:16px 0 24px;
-    display: none;
+    padding: 20px;
+    top: 40px;
+    left: -62px;
+    border: 2px solid hsla(0, 0%, 80%, 0.85);
+    background-color: white;
 }
-
-.country-item{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: start;
-    color:#bbb;
-    padding-left: 24px;
-    line-height: 40px;
-}
-
-.country-item p{
-    margin-left: 12px;
-}
-
-
-.country-item:hover{
-    color:#000;
-    background-color: #eee;
-}
-
-.section:hover .country-child{
-    display: block;
-}
-
-.container-content{
-    margin-top: 100px;
-}
-
-
-.title{
-    color:#679A06;
-    display: flex;
-    justify-content: center;
-    margin-bottom:80px;
-}
-
-.left{
-    width: 255px;
-    margin-right: 52px;
-    display: flex;
-    flex-direction: column;
-}
-
-.search{
-    color:white;
-    display: flex;
-    background-color: #679A06;
-    justify-content: center;
-}
-
-.content{
-    display: flex;
-    margin-bottom: 100px;
-    margin-left: 210px;
-}
-
-.search-bar{
+.search-bar:hover .x {
     display: flex;
 }
-
-.nothing{
-    font-weight:500;
-    color:#679A06;
+nav a {
+    color: black;
+    display: flex;
+    padding: 20px;
+}
+.name {
+    color: #679a06;
+}
+.search-used i {
+    padding: 10px;
+    background-color: #679a06;
+}
+nav a div {
+    padding: 0 5px;
+}
+main {
+    padding-bottom: 15px;
 }
 
-.search-input-2{
-    width: 200px;
-    padding:14px 12px;
-    border: 1px solid #ccc;
-    outline: none;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-}
+/* phần cuối trang */
 
-.icon-search-2{
-    background-color: #679A06;
-    width: 60px;
-    color:#fff;
-    text-align: center;
-    padding-top: 14px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.icon-search-2:hover{
-    cursor: pointer;
-    background-color: #4a6e06;
-}
-
-
-@media screen and (max-width:1024px){
-    .header{
-        top:auto;
-        padding-left: 4px;
-        padding-right: 0;
-    }
-
-    .nav-list{
-        margin-left: 0;
-    }
-
-    .header-container{
-        margin-top: 50px;
-    }
-
-    .header-main-img{
-        width: 100vw;
-    }
-
-    .header-container > .header-content{
-        top:8%;
-        left:36%;
-    }
-
-    .header-img{
-        height: 40vh;
-    }
-
-    .show-list{
-        margin-left: 100px;
-    }
-
-    .show-item{
-        height: auto;
-    }
-
-    footer{
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .container-content{
-        margin-top: 120px;
-    }
-
-    .info_address{
-        margin-left: 12px;
-    }
-
-    .content{
-        margin-left: 24px;
-    }
-
-    .footer-by{
-        height: 41vh;
-        display: flex;
-        align-items: start;
-    }
-}
-
-@media screen and(max-width:740px) {
+footer {
+    display: flex;
+    background-color: hsla(0, 0%, 95%, 0.9);
     
+    /* position: absolute;
+    bottom: -750px;*/
+    width: 100%; 
+}
+.footer-container .footer-title {
+    color: #679a06;
+
+    padding: 15px;
+    padding-left: 0px;
+}
+.footer-container {
+    padding: 3vh;
+}
+footer div ul li {
+    font-family: Roboto, sans-serif;
+    line-height: 30px;
+    padding-top: 5px;
+    font-size: smaller;
+}
+.footer-item .bold {
+    font-weight: bold;
+}
+.footer-by span {
+    color: hsla(0, 0%, 55%, 0.7);
+    font-size: small;
+    padding-top: 10px;
+}
+
+.footer-by {
+    background-color: hsla(0, 0%, 95%, 0.9);
+
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+    /* position: absolute;
+    bottom: -820px;
+    width: 100%; */
+}
+.footer-by a img {
+    padding: 4px 7px;
+    width: 155px;
+    background-color: hsla(0, 0%, 95%, 0.9);
+}
+a {
+    color: black;
+}
+.line-container {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+}
+
+.solid-line {
+    width: 100%;
+    height: 1px;
+    background-color: hsla(0, 0%, 80%, 0.85);
+}
+
+.blur-line {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20%;
+    height: 1px;
+    background-color: #3498db;
+}
+.language ul img {
+    width: 22px;
+    padding-right: 8px;
+}
+.language ul li {
+    display: flex;
+    padding-right: 60px;
+}
+.language .a {
+    position: relative;
+    padding: 16px;
+    padding-right: 80px;
+    display: flex;
+}
+.language ul {
+    position: absolute;
+    background-color: white;
+    border: 2px solid hsla(0, 0%, 80%, 0.85);
+    display: none;
+    top: 93px;
+    right: 0px;
+}
+.language:hover .language-list {
+    display: block;
+}
+a:hover {
+    color: #679a06;
+}
+
+.footer-after {
+    display: flex;
+}
+li > .language {
+    display: none;
+}
+
+.menu > i {
+    display: none;
+}
+.menu ul > i {
+    display: none;
+}
+.menu ul .search-used {
+    display: none;
+}
+/* reponsive  */
+@media (max-width: 575px) {
+    .menu > i {
+        display: block;
+    }
+    .menu ul > i {
+        display: block;
+    }
+    .menu ul .search-used {
+        display: block;
+    }
+    nav > .language {
+        display: none;
+    }
+    li > .language {
+        display: flex;
+    }
+    footer {
+        display: block;
+    }
+    .header {
+        display: none;
+    }
+    .menu > ul {
+        height: 100vh;
+        flex-direction: column;
+        background-color: hsla(0, 0%, 97%, 0.95);
+        bottom: 0;
+        box-shadow: 164px 0 10px 0 rgba(33, 18, 18, 0.5);
+        left: 0;
+        position: fixed;
+        top: 0;
+        transform: translateX(-500px);
+        transition: transform 0.8s;
+        width: 260px;
+    }
+    .menu ul > div {
+        padding: 20px 10px;
+    }
+    .search-used {
+        display: flex;
+    }
+    .nav-list > i {
+        position: fixed;
+        top: 0;
+        right: -122px;
+        padding: 10px;
+        font-size: 35px;
+        height: 40px;
+        font-style: normal;
+        width: 40px;
+        cursor: pointer;
+    }
+    .menu > i {
+        position: absolute;
+        right: 266px;
+        font-size: 23px;
+        top: 15px;
+    }
+    .menu {
+        position: relative;
+    }
+    nav .logo {
+        position: relative;
+        top: 9px;
+        left: 61px;
+        width: 230px;
+    }
+    .search-bar:hover .x {
+        display: flex;
+        left: -170px;
+        padding: 10px;
+    }
+    nav .menu .nav-list .nav-item .sub-nav-product {
+        position: static;
+        border: none;
+        background-color: hsla(0, 0%, 97%, 0.95);
+    }
+    .language ul {
+        position: absolute;
+        border: none;
+        display: none;
+        top: 333px;
+        right: 37px;
+        background-color: hsla(0, 0%, 97%, 0.95);
+    }
+    .menu ul .search-used {
+        padding: 24px;
+    }
+    .menu ul .search-used input {
+        padding: 8px;
+    }
+    nav .menu .nav-list .nav-item {
+        font-weight: normal;
+    }
+    nav .menu .nav-list .nav-item .sub-nav-product li {
+        background-color: hsla(0, 0%, 97%, 0.95);
+    }
+}
+nav.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    
+}
+.slider{
+    display: none;
 }
 .box1{
     width: 15px;
@@ -568,18 +383,64 @@ footer{
 }
 .ll{
     margin: 100px 150px;
-   position: relative;
+   /* position: relative; */
    
 }
 .ll input{
     width: 250px;
     height: 30px;
+    padding-left: 5px;
+}
+.ll textarea{
+    border: 1px solid gray;
+    padding-left: 5px;
+    
 }
 .ip input{
     margin: 5px 0;
     border: 1px solid gray;
 }
 .ip input:focus{
-    
-    box-shadow: rgba(30, 19, 7, 0.897) 0px 2px 4px;
+    border: 1px solid orange;
+    outline: none;
+    box-shadow: rgba(205, 111, 10, 0.784) 0px 2px 4px;
+}
+textarea:focus{
+    border: 1px solid orange;
+    outline: none;
+    box-shadow: rgba(205, 111, 10, 0.784) 0px 2px 4px; 
+}
+.ll iframe{
+    align:right;
+    margin-top: -370px; 
+    margin-bottom: 80px;
+}
+/*responsive nè*/
+@media screen and (max-width:575px){
+    .ll{
+       display: flex;
+       flex-wrap: wrap;
+    }
+    .ip{
+       
+       margin: 30px ;
+       margin-left: -140px;
+       
+    }
+    .ip input{
+        width: 49%;
+    }
+    .ip textarea{
+       width: 420px;
+    }
+    .ll iframe{
+        margin-top: 695px;
+        
+    }
+    .ll iframe{
+        margin-top: -10px;
+        
+        margin-left: -60px;
+    }
+
 }
