--- a/homestyle.css
+++ b/homestyle.css
@@ -11,6 +11,10 @@ body{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.padding-right-zero{
+    padding-right: 0 !important;
+}
+
 .flex-row{
     flex-direction: column;
 }
@@ -62,17 +66,17 @@ nav .menu .nav-list {
 }
 nav .menu .nav-list .nav-item {
     font-weight: bold;
-
-    padding: 10px 15px;
 }
 nav .menu .nav-list .have-subnav {
     position: relative;
     z-index: 10;
+    display: flex;
+    align-items: center;
 }
 nav .menu .nav-list .nav-item .sub-nav-product {
     display: none;
     font-weight: normal;
-    top: 38px;
+    top: 54px;
     left: 0px;
     background-color: white;
     width: 235px;
@@ -98,10 +102,6 @@ nav .menu .nav-list .nav-item .sub-nav-product li:hover {
 }
 nav .search-bar {
     position: relative;
-}
-nav .search-bar > i {
-    padding-top: 19px;
-    height: 59px;
 }
 
 nav .search-bar .search-bar-content {
