--- a/product.css
+++ b/product.css
@@ -1,4 +1,6 @@
-
+.slider{
+    display: none;
+}
 .hd {
     background-color: #679a06;
     width: 100%;
@@ -228,7 +230,6 @@ nav .menu .nav-list .nav-item .sub-nav-product {
     width: 235px;
     position: absolute;
     border: 2px solid hsla(0, 0%, 80%, 0.85);
-    z-index: 999;
 }
 nav .menu .nav-list .have-subnav:hover .sub-nav-product {
     display: block;
@@ -270,6 +271,8 @@ nav .search-bar .search-bar-content {
 nav a {
     color: black;
     display: flex;
+}
+.language a {
     padding: 20px;
 }
 .name {
@@ -291,10 +294,9 @@ main {
 footer {
     display: flex;
     background-color: hsla(0, 0%, 95%, 0.9);
-    
     position: absolute;
-    bottom: -750px;
     width: 100%;
+    bottom: -830px;
 }
 .footer-container .footer-title {
     color: #679a06;
@@ -327,7 +329,7 @@ footer div ul li {
     justify-content: center;
     padding: 15px;
     position: absolute;
-    bottom: -820px;
+    bottom: -900px;
     width: 100%;
 }
 .footer-by a img {
@@ -427,18 +429,20 @@ li > .language {
     .header {
         display: none;
     }
+
     .menu > ul {
         height: 100vh;
         flex-direction: column;
         background-color: hsla(0, 0%, 97%, 0.95);
         bottom: 0;
-        box-shadow: 164px 0 10px 0 rgba(33, 18, 18, 0.5);
+
         left: 0;
         position: fixed;
         top: 0;
         transform: translateX(-500px);
-        transition: transform 0.8s;
+        transition: transform 0.5s;
         width: 260px;
+        box-shadow: 164px 0 10px 0 rgba(33, 18, 18, 0.5);
     }
     .menu ul > div {
         padding: 20px 10px;
@@ -508,10 +512,6 @@ nav.sticky {
     top: 0;
     width: 100%;
     background-color: white;
-    
-}
-.slider{
-    display: none;
 }
 /* product responsive*/
 @media (max-width: 575px){
@@ -598,3 +598,10 @@ nav.sticky {
     }
     
 }
+
+
+
+
+
+
+/*haizzzzzz*/
